# Intelligent-Support-Ticket-Routing-System

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
scripts/: active_loop.py  build_dataset.py  build_twitter_dataset.py  check_drift.py  eval_costs.py  train_baseline.py  train_urgency.py
src/ticketrouting/: llm.py  schemas.py
src/ticketrouting/active/: __init__.py  loop.py
src/ticketrouting/api/: app.py  service.py
src/ticketrouting/data/: intent_mapping.py  label.py  loaders.py  twitter.py
src/ticketrouting/demo/: app.py
src/ticketrouting/drift/: __init__.py  distribution.py
src/ticketrouting/eval/: __init__.py  cost.py
src/ticketrouting/models/category/: baseline.py
src/ticketrouting/models/summary/: summarizer.py
src/ticketrouting/models/urgency/: baseline.py
tests/: test_active.py  test_api.py  test_baseline.py  test_cost.py  test_drift.py  test_intent_mapping.py  test_label.py  test_schemas.py  test_summarizer.py  test_twitter.py  test_urgency_baseline.py
