[project]
name = "ticketrouting"
version = "0.1.0"
description = "Intelligent support ticket routing system: category, urgency, and LLM-powered summarization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alroy" }]

dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",

    # Classical ML / baselines
    "scikit-learn>=1.4",
    "scipy>=1.12",

    # Deep learning / transformers
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.29",
    "sentence-transformers>=2.7",

    # LLM client (for synthetic labeling + summarization)
    "anthropic>=0.30",
    "tenacity>=8.2",

    # Twitter dataset ingestion (Kaggle CLI)
    "kaggle>=1.6",

    # Serving + demo
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "streamlit>=1.33",

    # Caching / storage
    "redis>=5.0",
    "diskcache>=5.6",

    # Eval / monitoring
    "evidently>=0.4",
    "mlflow>=2.12",

    # Utilities
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
]

[project.scripts]
ticketrouting = "ticketrouting.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
